--- a/classify-android/app/src/main/res/layout/activity_z_add_assignment.xml
+++ b/classify-android/app/src/main/res/layout/activity_z_add_assignment.xml
@@ -42,20 +42,7 @@
                     android:textSize="18dp"
                     android:textStyle="bold"
                     android:textColor="@color/colorWhite"/>
-
-                <ToggleButton
-                    android:layout_gravity="right|center"
-                    android:id="@+id/btn_search_class"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:textOn=""
-                    android:textOff=""
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/btn_search"/>
-
-
             </FrameLayout>
-
 
         </LinearLayout>
 
@@ -71,6 +58,7 @@
         card_view:cardElevation="5dp">
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/add_grade2"
             android:background="@drawable/primarydark_ripple"
             android:clickable="true"
