--- a/classify-android/app/src/main/res/layout/activity_z_input_quiz.xml
+++ b/classify-android/app/src/main/res/layout/activity_z_input_quiz.xml
@@ -178,7 +178,7 @@
                             android:id="@+id/input_name6"
                             android:hint="Quiz"
                             android:textSize="16dp"
-                            android:textColorHint="#000000"
+                            android:textColorHint="@color/colorLightGray"
                             android:layout_width="180dp"
                             android:layout_height="wrap_content" />
 
@@ -186,8 +186,8 @@
                             android:id="@+id/input_total6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:hint="Total"
-                            android:textColorHint="#000000"
+                            android:hint="0"
+                            android:textColorHint="@color/colorLightGray"
                             android:inputType="number"
                             android:textSize="16dp"
                             />
