--- a/classify-android/app/src/main/res/layout/teacher_schedule_view.xml
+++ b/classify-android/app/src/main/res/layout/teacher_schedule_view.xml
@@ -48,6 +48,7 @@
                 </LinearLayout>
 
                 <ToggleButton
+                    android:visibility="gone"
                     android:id="@+id/_btn_search_schedule"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
@@ -65,6 +66,7 @@
     </android.support.v7.widget.CardView>
 
         <FrameLayout
+            android:visibility="gone"
             android:id="@+id/frame_search_schedule"
             android:layout_width="match_parent"
             android:layout_height="60dp"
